--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  title: "{{< var site_title >}}"
+  title: "{{< var book_title >}}"
   type: book
   output-dir: docs
 
@@ -7,13 +7,13 @@ execute:
   freeze: true
   
 book:
-  title: "{{< var course_num >}}: {{< var course_title >}}"
+  title: "{{< var book_title >}}"
   author: "Rafael C. Alvarado"
-  date: "05/08/2024"
+  date: "12/03/2024"
   reader-mode: false
   page-navigation: true
   repo-actions: [edit]
-  repo-url: "https://github.com/ontoligent/DS5100-book" # Variable does not work here
+  repo-url: "https://github.com/ontoligent/programming-for-data-science" # Variable does not work here
   chapters:
     - part: index.qmd # 00 Welcome 
       chapters: 
