--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  title: "Programming for Data Science Bootcamp"
+  title: "PFDS Bootcamp"
   type: book
   output-dir: docs
 
@@ -7,15 +7,15 @@ execute:
   freeze: true
   
 book:
-  title: "{{< var book_title >}}"
+  title: "Programming for Data Science Bootcamp"
   author: "Rafael C. Alvarado"
-  date: "12/03/2024"
+  date: "03/06/2025"
   reader-mode: false
   page-navigation: true
   repo-actions: [edit]
-  repo-url: "https://github.com/ontoligent/programming-for-data-science" # Variable does not work here
+  repo-url: "https://github.com/ontoligent/programming-for-data-science"
   chapters:
-    - part: index.qmd # 00 Welcome         
+    - index.qmd # 00 Welcome         
     - part: modules/m02/m02-intro.qmd # Python Introduction
       chapters:
         - notebooks/M02_BasicPython/on-data.qmd
