--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,11 +20,7 @@ book:
     - part: "Getting Started"
       chapters:
         - notebooks/M01_GettingStarted/M01-00-Intro.qmd
-      #   - notebooks/M01_GettingStarted/M01-01-InstallingPython.ipynb
-      #   - notebooks/M01_GettingStarted/M01-02-RunningPython.ipynb
-      #   - notebooks/M01_GettingStarted/M01-03-InstallingVSCode.ipynb
-      #   - notebooks/M01_GettingStarted/M01-03-InstallingVSCode.ipynb
-      #   - notebooks/M01_GettingStarted/M01-05-UsingJupyterNotebooks.ipynb
+        - notebooks/M01_GettingStarted/M01-01-HelloWorld.qmd
     - part: notebooks/M02_BasicPython/m02-intro.qmd # 1 | Python Introduction
       chapters:
         - notebooks/M02_BasicPython/on-data.qmd
